Revision history for {{$dist->name}}

{{$NEXT}}

        Make git-wrapper a bit friendlier on old gits (Ricardo Signes)

0.017     2011-09-27 14:35:19 America/New_York

        Remove usage of '//' operator (again) (John SJ Anderson)

0.016     2011-09-05 20:24:49 America/New_York

        Lots of tweaks to tests that will (hopefully) reduce some testing noise (John SJ Anderson)
        Fix for multi-line commit messages on Win32 (Christian Walde)

0.015     2011-07-16 10:15:15 America/New_York

        Added a fix that allows the 'clone' command to work (John SJ Anderson)
        Change 'log' indentation stripping behavior (RT#56427, Mark Grimes)

0.014   2010-11-12

        Added empty commit message handling (Robert Bohne)
        Fixed failed tests on slow smokers. (Robert Bohne)
        Convert to Dist::Zilla (John SJ Anderson)
        Add 'is_dirty' helper to Statuses (John SJ Anderson)

0.013   2010-09-06

        Added missing dependency for Test::Deep

0.012   2010-09-05

        Rewrote // operator into pre-5.10 perl
        Debugging mode (Alexandr Ciornii)

0.011   2010-07-14

        Doc Patch (Gabrielle Roth)
        Git Status Support (Murray)
        Remove the Stupid basic.t test (Jonathan Scott Duff)

0.010   2010-06-14

        Win32 Support -- Docs and Tests (Christian Walde)

0.009   2010-06-05

        stop failing tests on git 1.7 or newer (Aristotle Pagaltzis)
        do not rely on default value of log --pretty (Aristotle Pagaltzis)

0.008   2010-03-17

        fix the tests for git >= 1.7 (Michael Schout)

0.007   2009-08-26
        fix tests even more firmly (perigrin)

0.006   2009-06-01

        fix tests more firmly

0.005   2009-05-28

        change tests to pass on git 1.6

0.004   2008-06-19

        add links to other git-related things
        inflate Git::Wrapper::Log objects

0.003   2008-06-05

        improve error handling
        make documentation clearer

0.002   2008-06-04

        properly depend on git binary
